完成home页骨架搭建

--- a/src/assets/css/normalize.css
+++ b/src/assets/css/normalize.css
@@ -21,6 +21,16 @@ html {
   /* 3 */
 }
 
+#root {
+  height: 100%;
+  width: 100%;
+}
+
+.App {
+  height: 100%;
+  width: 100%;
+}
+
 /* Sections
    ========================================================================== */
 
