--- a/src/pages/Home/components/SideMenu/SideMenu.module.less
+++ b/src/pages/Home/components/SideMenu/SideMenu.module.less
@@ -4,8 +4,8 @@
   align-items: center;
   justify-content: center;
   top: 0;
-  height: 32px;
-  margin: 16px;
+  height: 64px;
+  width: 100%;
   color: #eee;
   font-size: 20px;
 
