--- a/src/pages/SubsideMonitor/style/index.module.less
+++ b/src/pages/SubsideMonitor/style/index.module.less
@@ -33,9 +33,10 @@
 .rainbow-bar {
   display: flex;
   position: absolute;
-  top: 300px;
+  top: 260px;
   left: 40px;
   flex-direction: column;
+  z-index: 10;
   background-image: linear-gradient(rgb(255, 0, 0),
       rgb(255, 255, 0),
       rgb(0, 255, 0),
