开发收敛模快

--- a/src/pages/SubsideHistory/style/index.module.less
+++ b/src/pages/SubsideHistory/style/index.module.less
@@ -4,3 +4,15 @@
   left: 50%;
   transform: translateX(-50%)
 }
+
+.date-picker-component {
+  position: absolute;
+  right: 22px;
+  top: 15px;
+}
+
+.max-offset-chart,
+.single-point-chart {
+  height: 300px;
+  overflow: hidden;
+}
