--- a/src/pages/ConvergenceTransform/style/index.module.less
+++ b/src/pages/ConvergenceTransform/style/index.module.less
@@ -1,3 +1,11 @@
+.slide-warp {
+  margin-top: 30px;
+  width: 300px;
+  float: left;
+  margin-left: 50%;
+  transform: translateX(-50%);
+}
+
 .convergence-transform-chart {
   height: 300px;
   overflow: hidden;
