--- a/src/pages/Home/Home.module.less
+++ b/src/pages/Home/Home.module.less
@@ -3,6 +3,17 @@
   height: 100%;
   width: 100%;
 
+  .header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 48px;
+    line-height: 48px;
+    z-index: 100;
+    font-size: 18px;
+    background-color: #fff;
+  }
+
   .sider {
     height: calc(100% - 64px - 40px);
     margin-top: 64px;
@@ -22,7 +33,15 @@
         color: #1890ff;
       }
     }
+
+    .company {
+      position: fixed;
+      left: 16px;
+      bottom: 60px;
+      color: #eee;
+    }
   }
+
 
 
 
