--- a/src/pages/ConvergenceTransform/style/index.module.less
+++ b/src/pages/ConvergenceTransform/style/index.module.less
@@ -1,3 +1,20 @@
+.convergence-transform {
+  display: flex;
+
+  >.convergence-transform-item {
+    flex-basis: calc(50% - 10px);
+    height: 550px;
+  }
+
+  .convergence-transform-item:nth-child(1) {
+    margin-right: 10px;
+  }
+
+  .convergence-transform-item:nth-child(2) {
+    margin-left: 10px;
+  }
+}
+
 .slide-warp {
   margin-top: 30px;
   width: 200px;
@@ -7,6 +24,6 @@
 }
 
 .convergence-transform-chart {
-  height: 200px;
+  height: 330px;
   overflow: hidden;
 }
